Scrollbar fix; group privacy tweaks. (#22)

--- a/src/frontend/css/style.scss
+++ b/src/frontend/css/style.scss
@@ -26,6 +26,7 @@ strong {
         grid-template-columns: 1fr 5fr 1fr;
         grid-template-rows: 55px 1fr 55px;
         grid-row-gap: 20px;
+        overflow: scroll;
     }
 
     nav {
@@ -193,6 +194,21 @@ strong {
         font-size: 0.6em;
         color: #aa0000;
         margin-bottom: 5px;
+    }
+    .subgroupEmail {
+        margin-left: 5px;
+        span {
+            cursor: pointer;
+        }
+    }
+    #subgroupEmailText {
+        display: none;
+    }
+    .subgroupPrivate {
+        margin-left: 5px;
+        span {
+            cursor: pointer;
+        }
     }
     .addMemberButton {
         margin-left: 5px;
